Fix AdManagerCategoryExclusionFragment build errors
PiperOrigin-RevId: 856384899